Enabled SOLO matches, fixed some styling issues on iOS.

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -11,8 +11,8 @@
 }
 
 .player-picture {
-  width: 4em;
-  height: 4em;
-  border-radius: 2.5em;
-  margin-right: 1em;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  margin-right: 10px;
 }
