--- a/src/css/doppelkopfSchreiben.css
+++ b/src/css/doppelkopfSchreiben.css
@@ -1,5 +1,5 @@
 .table {
-  width: 80%;
+  width: 100%;
   border-collapse: collapse;
   border: 1px solid black;
 }
@@ -61,7 +61,8 @@
 }
 
 .write-blog {
-  width: 25%;
+  width: 50%;
+  margin: 0 auto;
   padding: 15px;
 }
 
